# ecg_models

./: .gitignore  README.md  pyproject.toml
examples/: rat.py
src/ecg_models/: Human.py  Rat.py  __init__.py  utils.py  waves.py
